--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             { path: 'fresh_food',           redirect: '5233349' },
             { path: 'sushi_pack',           redirect: '5551413' },
             { path: 'drinks_pack',          redirect: '5382118' },
-            { path: 'liquour_pack',         redirect: '5322829' },
+            { path: 'liquor_pack',         redirect: '5322829' },
             { path: 'desert_pack',          redirect: '5283858' },
             { path: 'fast_food',            redirect: '5272795' },
             { path: 'rf_scanners',          redirect: '5378511' },
@@ -78,47 +78,6 @@
          // { path: '',                     redirect: '' },
          // { path: '',                     redirect: '' },
         ]
-
-        /*
-            https://store.fractalgamestudios.es/?pack=prepared_food
-            https://store.fractalgamestudios.es/?pack=black_ops_zombies
-            https://store.fractalgamestudios.es/?pack=business_zombies
-            https://store.fractalgamestudios.es/?pack=runner_zombies
-            https://store.fractalgamestudios.es/?pack=melee_pack_2
-            https://store.fractalgamestudios.es/?pack=melee_pack_1
-            https://store.fractalgamestudios.es/?pack=can_food
-            https://store.fractalgamestudios.es/?pack=fresh_food_2
-            https://store.fractalgamestudios.es/?pack=fresh_food
-            https://store.fractalgamestudios.es/?pack=sushi_pack
-            https://store.fractalgamestudios.es/?pack=drinks_pack
-            https://store.fractalgamestudios.es/?pack=liquour_pack
-            https://store.fractalgamestudios.es/?pack=desert_pack
-            https://store.fractalgamestudios.es/?pack=fast_food
-            https://store.fractalgamestudios.es/?pack=rf_scanners
-            https://store.fractalgamestudios.es/?pack=recyclers
-            https://store.fractalgamestudios.es/?pack=nails_pack
-            https://store.fractalgamestudios.es/?pack=retexture_dayz
-
-            https://store.fractalgamestudios.es/prepared_food
-            https://store.fractalgamestudios.es/black_ops_zombies
-            https://store.fractalgamestudios.es/business_zombies
-            https://store.fractalgamestudios.es/runner_zombies
-            https://store.fractalgamestudios.es/melee_pack_1
-            https://store.fractalgamestudios.es/melee_pack_2
-            https://store.fractalgamestudios.es/can_food
-            https://store.fractalgamestudios.es/fresh_food
-            https://store.fractalgamestudios.es/fresh_food_2
-            https://store.fractalgamestudios.es/sushi_pack
-            https://store.fractalgamestudios.es/drinks_pack
-            https://store.fractalgamestudios.es/liquour_pack
-            https://store.fractalgamestudios.es/desert_pack
-            https://store.fractalgamestudios.es/fast_food
-            https://store.fractalgamestudios.es/rf_scanners
-            https://store.fractalgamestudios.es/recyclers
-            https://store.fractalgamestudios.es/nails_pack
-            https://store.fractalgamestudios.es/retexture_dayz
-        */
-
 
         const redirect = (path) => {
             const route = routes.find(route => route.path === path)
