--- a/index.html
+++ b/index.html
@@ -66,17 +66,17 @@
             { path: 'recyclers',            redirect: '5264029' },
             { path: 'nails_pack',           redirect: '5855095' },
             { path: 'retexture_dayz',       redirect: '5937423' },
-         // { path: '',                     redirect: '' },
-         // { path: '',                     redirect: '' },
-         // { path: '',                     redirect: '' },
-         // { path: '',                     redirect: '' },
-         // { path: '',                     redirect: '' },
-         // { path: '',                     redirect: '' },
-         // { path: '',                     redirect: '' },
-         // { path: '',                     redirect: '' },
-         // { path: '',                     redirect: '' },
-         // { path: '',                     redirect: '' },
-         // { path: '',                     redirect: '' },
+         { path: '',                     redirect: '' },
+         { path: '',                     redirect: '' },
+         { path: '',                     redirect: '' },
+         { path: '',                     redirect: '' },
+         { path: '',                     redirect: '' },
+         { path: '',                     redirect: '' },
+         { path: '',                     redirect: '' },
+         { path: '',                     redirect: '' },
+         { path: '',                     redirect: '' },
+         { path: '',                     redirect: '' },
+         { path: '',                     redirect: '' },
         ]
 
         const redirect = (path) => {
@@ -101,7 +101,7 @@
                         window.location.href = base_URL;
                     }
                 }
-            }, 5000);
+            }, 3000);
         };
 
     </script>
