--- a/index.html
+++ b/index.html
@@ -66,23 +66,24 @@
             { path: 'recyclers',            redirect: '5264029' },
             { path: 'nails_pack',           redirect: '5855095' },
             { path: 'retexture_dayz',       redirect: '5937423' },
-         { path: '',                     redirect: '' },
-         { path: '',                     redirect: '' },
-         { path: '',                     redirect: '' },
-         { path: '',                     redirect: '' },
-         { path: '',                     redirect: '' },
-         { path: '',                     redirect: '' },
-         { path: '',                     redirect: '' },
-         { path: '',                     redirect: '' },
-         { path: '',                     redirect: '' },
-         { path: '',                     redirect: '' },
-         { path: '',                     redirect: '' },
+            { path: 'discord',              link: '' },
+            { path: '',                     redirect: '' },
+            { path: '',                     redirect: '' },
+            { path: '',                     redirect: '' },
+            { path: '',                     redirect: '' },
+            { path: '',                     redirect: '' },
+            { path: '',                     redirect: '' },
+            { path: '',                     redirect: '' },
+            { path: '',                     redirect: '' },
+            { path: '',                     redirect: '' },
+            { path: '',                     redirect: '' },
         ]
 
         const redirect = (path) => {
             const route = routes.find(route => route.path === path)
             if (route) {
-                window.location.href = base_URL + '/package/' + route.redirect
+                if (route.link != '') window.location.href = route.link;
+                window.location.href = base_URL + '/package/' + route.redirect;
             }
         }
 
