Add redirect for 'prescription' path

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             { path: 'nails_pack',           redirect: '5855095' },
             { path: 'retexture_dayz',       redirect: '5937423' },
             { path: 'discord',              link: 'https://discord.com/invite/v7h3PnssaS' },
-            { path: '',                     redirect: '' },
+            { path: 'prescription',         redirect: '7021715' },
             { path: '',                     redirect: '' },
             { path: '',                     redirect: '' },
             { path: '',                     redirect: '' },
